--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "postinstall": "concurrently \"npm install --prefix backend\" \"npm install --prefix frontend\"",
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
     "start:backend": "cd backend && node server.js",
     "start:frontend": "cd frontend && npm run dev"
